# FoldQC

./: .gitattributes  .gitignore  README.md  __init__.py  alphafold_database.py  analysis.py  analysis_coordinator.py  compat.py  compute.py  confidence.py  context_service.py  data_acquisition.py  data_contracts.py  dependencies.py  ensemble.py  ensemble_lifecycle.py  export.py  gui.py  gui_application.py  gui_coloring.py  gui_dependencies.py  gui_export.py  gui_jobs.py  gui_layout.py  gui_loading.py  gui_metrics.py  gui_operations.py  gui_plots.py  gui_presenter.py  gui_rules.py  gui_services.py  gui_session.py  gui_state.py  gui_view.py  lifecycle_support.py  loader.py  loader_discovery.py  loader_models.py  loader_utils.py  metrics.py  (+22 more)
providers/: __init__.py  alphafold.py  alphafold_database.py  base.py  boltz.py  chai.py  openfold.py  protenix.py  registry.py  structure.py
tests/: test_alphafold_database.py  test_analysis.py  test_compute.py  test_confidence.py  test_data_contracts.py  test_dependencies.py  test_ensemble.py  test_ensemble_lifecycle.py  test_export.py  test_gui_model_switching.py  test_gui_rules.py  test_gui_state.py  test_loader_provider.py  test_metrics.py  test_model_state.py  test_mol_viewer.py  test_openfold_provider.py  test_ownership.py  test_painter_palettes.py  test_palettes.py  test_plot_data.py  test_plot_viewer.py  test_plots.py  test_plugin_registration.py  test_presentation_contracts.py  test_properties.py  test_provider_registry.py  test_reports.py  test_session.py  test_statistics_selection.py  test_token_map.py  test_viewer_transactions.py
tools/: PALETTES.md  benchmark_painting.py  install_deps.py  mpl_palette_to_foldqc.py
