[project]
name = "FoldQC"
version = "0.1.0"
description = "PyMOL plugin for visualizing structure-prediction confidence metrics."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Karl Gruber" }
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
exclude = ["tests/"]
